<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main Content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nearby_tasks_all_container"
            android:layout_marginHorizontal="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/nearby_tasks_all_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/back_btn_nearby_tasks"
                    android:layout_width="@dimen/back_btn"
                    android:layout_height="@dimen/back_btn"
                    app:layout_constraintStart_toStartOf="@id/nearby_tasks_all_header"
                    android:background="@drawable/rounded_back_btn"
                    app:layout_constraintTop_toTopOf="@id/nearby_tasks_all_header"
                    app:layout_constraintBottom_toBottomOf="@id/nearby_tasks_all_header" />

                <TextView
                    android:id="@+id/searchResultLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nearby_tasks_label"
                    android:textSize="22sp"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="600"
                    app:layout_constraintStart_toEndOf="@id/back_btn_nearby_tasks"
                    app:layout_constraintTop_toTopOf="@id/nearby_tasks_all_header"
                    app:layout_constraintBottom_toBottomOf="@id/nearby_tasks_all_header"
                    android:layout_marginStart="20dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/switchSearchBtn"
                    android:layout_width="25dp"
                    android:layout_height="12dp"
                    app:layout_constraintStart_toEndOf="@id/searchResultLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ic_down_arrow" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nearby_tasks_all_header"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/authInputText"
                android:paddingHorizontal="12dp"
                android:paddingVertical="5dp">

                <EditText
                    android:id="@+id/searchQuery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="Search"
                    android:imeOptions="actionSearch"
                    android:focusableInTouchMode="true"
                    android:paddingVertical="10dp"
                    android:background="@null"
                    app:layout_constraintStart_toEndOf="@id/searchIcon"
                    android:textColor="@color/inputHint"
                    android:textSize="16sp"
                    android:textFontWeight="200"
                    android:fontFamily="@font/roboto"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginHorizontal="10dp" />

                <Button
                    android:id="@+id/searchIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_search"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/registerPageMargin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/locationPinIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_location_pin"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/registerPageMargin"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSearchResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/searchBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:nestedScrollingEnabled="true"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="70dp"/>

            <TextView
                android:id="@+id/noItemsMessageforSearchResults"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/noItemMsgVerticalMargin"
                android:text="@string/no_items_message"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchBox" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Loading Overlay -->
    <RelativeLayout
        android:id="@+id/progressBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/semi_transparent_black">

        <!-- Circular ProgressBar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</FrameLayout>
