...
            app:destination="@id/searchResultFragment" />
        <action
            android:id="@+id/action_homeFragment_to_helperDetailFragment"
            app:destination="@id/helperDetailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_taskDetailFragment2"
            app:destination="@id/taskDetailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_postTaskFragment"
            app:destination="@id/postTaskFragment" />
        <action
            android:id="@+id/action_homeFragment_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment" />
...
